compiler/testData/checkerWithErrorTypes/full/cast/IsErasedDisallowFromParameter.jet
import java.util.List;
import java.util.Collection;

fun ff(l: Collection<Int>) = l is <!INCOMPATIBLE_TYPES!>List<String><!>

